--- a/SpaceX_Machine_Learning_Prediction_Part_5.ipynb
+++ b/SpaceX_Machine_Learning_Prediction_Part_5.ipynb
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "YdCEitcec3Aa"
       },
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "AX00aMpQc3Af"
       },
@@ -239,14 +239,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
         "id": "ISN05Z-lc3Ah",
-        "outputId": "5812cd54-a011-4e15-9537-1e6f5698108b"
+        "outputId": "feb7ef3b-996f-424d-efc9-e1dba2d9d8e2"
       },
       "outputs": [
         {
@@ -276,7 +276,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0bc36768-cdae-4334-8639-656db6ca39ef\">\n",
+              "  <div id=\"df-c4745bea-74cf-474d-afc3-1c69a88ab2c1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -425,7 +425,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0bc36768-cdae-4334-8639-656db6ca39ef')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c4745bea-74cf-474d-afc3-1c69a88ab2c1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -476,12 +476,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0bc36768-cdae-4334-8639-656db6ca39ef button.colab-df-convert');\n",
+              "          document.querySelector('#df-c4745bea-74cf-474d-afc3-1c69a88ab2c1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0bc36768-cdae-4334-8639-656db6ca39ef');\n",
+              "          const element = document.querySelector('#df-c4745bea-74cf-474d-afc3-1c69a88ab2c1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -504,7 +504,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 5
         }
       ],
       "source": [
@@ -519,14 +519,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 505
         },
         "id": "4GZuxsXAc3Ai",
-        "outputId": "11c7836e-0113-433c-bbd2-f6c4f8d2259d"
+        "outputId": "5d95044e-6611-474e-dccb-8d2a4c979cd0"
       },
       "outputs": [
         {
@@ -589,7 +589,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6a9057f1-97ea-4a3a-af98-26f57282d0db\">\n",
+              "  <div id=\"df-7fac9706-706e-4159-a990-8a7a57c3930e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -901,7 +901,7 @@
               "</table>\n",
               "<p>90 rows × 83 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6a9057f1-97ea-4a3a-af98-26f57282d0db')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7fac9706-706e-4159-a990-8a7a57c3930e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -952,12 +952,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6a9057f1-97ea-4a3a-af98-26f57282d0db button.colab-df-convert');\n",
+              "          document.querySelector('#df-7fac9706-706e-4159-a990-8a7a57c3930e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6a9057f1-97ea-4a3a-af98-26f57282d0db');\n",
+              "          const element = document.querySelector('#df-7fac9706-706e-4159-a990-8a7a57c3930e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -980,7 +980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ],
       "source": [
@@ -1014,13 +1014,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vkQdkLmWc3Aj",
-        "outputId": "9f173cd2-5f4f-4be8-a0f7-77c8eb0e10cb"
+        "outputId": "872136a1-6bf9-4af4-aa2e-42d637a99d5d"
       },
       "outputs": [
         {
@@ -1035,7 +1035,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 10
         }
       ],
       "source": [
@@ -1063,7 +1063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "id": "A63W0oCzc3Al"
       },
@@ -1075,7 +1075,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1554,9 +1554,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S4it68tBef5H",
-        "outputId": "bc079034-2531-4bc9-9a02-124c90f98d7e"
+        "outputId": "8b21d93c-ed58-4da5-d25c-a0bce8316369"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1578,7 +1578,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -1620,7 +1620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "id": "hWoTCzfGc3An"
       },
@@ -1640,7 +1640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1684,7 +1684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 12,
       "metadata": {
         "id": "9rZ88oumc3Ap"
       },
@@ -1697,13 +1697,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eujC0fBSc3Ap",
-        "outputId": "f26fd574-3621-4925-be63-902333e0c69b"
+        "outputId": "ac13f8d7-fb40-44ce-808c-ac6e91a4cc94"
       },
       "outputs": [
         {
@@ -1716,7 +1716,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 13
         }
       ],
       "source": [
@@ -1741,13 +1741,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lWeOAEyPc3Aq",
-        "outputId": "5cdb01f5-e1f3-4c8f-f636-ba32b3f068d5"
+        "outputId": "e674f3ff-863e-43df-868e-e5a97016bb1b"
       },
       "outputs": [
         {
@@ -1784,13 +1784,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d_MhpI3Ac3Ar",
-        "outputId": "ccda856f-ac24-46dc-d1c5-93a914a29fae"
+        "outputId": "3149b833-6d25-4f9c-812e-bac76417bca4"
       },
       "outputs": [
         {
@@ -1801,7 +1801,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 15
         }
       ],
       "source": [
@@ -1819,14 +1819,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
         "id": "jP5T52iqc3Ar",
-        "outputId": "79824477-2a22-4519-beb4-942ddfed09ac"
+        "outputId": "ff01470d-edc2-499e-840c-22d9ee29bba0"
       },
       "outputs": [
         {
@@ -1876,7 +1876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 17,
       "metadata": {
         "id": "0Lz6x43Lc3As"
       },
@@ -1890,13 +1890,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "l0kjq-yzc3At",
-        "outputId": "bf194738-7740-49c9-f41c-cfb240a0db3b"
+        "outputId": "e02fbe0a-e4f8-431f-e571-7f7e59481d94"
       },
       "outputs": [
         {
@@ -1912,7 +1912,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 18
         }
       ],
       "source": [
@@ -1925,13 +1925,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZrQDkX3Mc3At",
-        "outputId": "a9ca06b9-885e-45dd-8e8e-c480c7600913"
+        "outputId": "ade1b3cd-b3c8-437d-ae21-02d4d8a535a1"
       },
       "outputs": [
         {
@@ -1968,13 +1968,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NrcTQqwic3Au",
-        "outputId": "2b7f84a2-df86-4f58-b3db-14b2147abf10"
+        "outputId": "33a9a3b2-c60b-4f23-a389-3381227bcd7a"
       },
       "outputs": [
         {
@@ -1985,7 +1985,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 20
         }
       ],
       "source": [
@@ -2003,14 +2003,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
         "id": "X8rXDY3Sc3Au",
-        "outputId": "e8f4911b-ade2-446f-e068-12100d96cdad"
+        "outputId": "d3d811ad-f747-4480-8e70-9a58c29b384a"
       },
       "outputs": [
         {
@@ -2051,7 +2051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 22,
       "metadata": {
         "id": "YI1bjSEPc3Av"
       },
@@ -2069,13 +2069,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3CTewsHZc3Av",
-        "outputId": "981a241a-90da-459d-fe3b-2256dadce98c"
+        "outputId": "9c266c41-4f60-43c9-ba24-b414518fb8b6"
       },
       "outputs": [
         {
@@ -2092,7 +2092,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 23
         }
       ],
       "source": [
@@ -2105,26 +2105,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "862HzSLpc3Aw",
-        "outputId": "571caa05-9725-4faf-c9fc-ce6b4ee70fca"
+        "outputId": "74ff63ac-07f3-4e54-f7e7-fec781ffd766"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tuned hpyerparameters :(best parameters)  {'criterion': 'entropy', 'max_depth': 4, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 10, 'splitter': 'random'}\n",
-            "accuracy : 0.8892857142857142\n"
+            "tuned hyperparameters :(best parameters)  {'criterion': 'entropy', 'max_depth': 2, 'max_features': 'sqrt', 'min_samples_leaf': 4, 'min_samples_split': 5, 'splitter': 'best'}\n",
+            "accuracy : 0.8767857142857143\n"
           ]
         }
       ],
       "source": [
-        "print(\"tuned hpyerparameters :(best parameters) \",tree_cv.best_params_)\n",
+        "print(\"tuned hyperparameters :(best parameters) \",tree_cv.best_params_)\n",
         "print(\"accuracy :\",tree_cv.best_score_)"
       ]
     },
@@ -2148,13 +2148,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sUlYUyJdc3Aw",
-        "outputId": "f65564bf-2e62-47b9-d4e2-479a43242c97"
+        "outputId": "54e25664-b9f4-4907-8a66-6c92d7b7cb87"
       },
       "outputs": [
         {
@@ -2165,7 +2165,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 25
         }
       ],
       "source": [
@@ -2183,14 +2183,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
         "id": "6EvkNowFc3Ax",
-        "outputId": "e437d32a-f35b-4460-b689-6c3907c9b3ea"
+        "outputId": "c359bb00-d473-4c74-ecd6-b2c892f3a929"
       },
       "outputs": [
         {
@@ -2231,7 +2231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 27,
       "metadata": {
         "id": "blxVQPTEc3Ax"
       },
@@ -2246,13 +2246,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ncx7DTvac3Ay",
-        "outputId": "1240de68-6430-4659-aca1-bdb2faf1c12d"
+        "outputId": "be808b47-fb37-4f3e-d59d-6f5e024e11ad"
       },
       "outputs": [
         {
@@ -2266,7 +2266,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 29
         }
       ],
       "source": [
@@ -2279,13 +2279,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q7pipccfc3Ay",
-        "outputId": "ed2fe343-02f3-4372-d020-7147ad4378d6"
+        "outputId": "d74b7e4e-95dd-4481-f76d-d35fb8d69155"
       },
       "outputs": [
         {
@@ -2322,13 +2322,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-mLyeUbbc3Ay",
-        "outputId": "a1599173-c829-4b0b-aa2e-b63db9f4957e"
+        "outputId": "d269d699-2c8e-4417-eea2-3e9219eabd17"
       },
       "outputs": [
         {
@@ -2339,7 +2339,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 31
         }
       ],
       "source": [
@@ -2357,14 +2357,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
         "id": "W9_SgMDBc3Az",
-        "outputId": "d142782f-d255-4b01-8979-25e6d7352a3d"
+        "outputId": "ee707e26-21c4-4e1c-f2ab-3a106d43f088"
       },
       "outputs": [
         {
@@ -2405,7 +2405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 45,
       "metadata": {
         "id": "31I8gkv0c3Az"
       },
@@ -2415,8 +2415,8 @@
         "best_predictor = \"\"\n",
         "best_result = 0\n",
         "for predictor in predictors:\n",
-        "    \n",
-        "    predictor.score(X_test, Y_test)"
+        "  predictor.score(X_test, Y_test)\n",
+        "  predictor\n"
       ]
     },
     {
