--- a/jupyter_labs_eda_sql_coursera_sqllite.ipynb
+++ b/jupyter_labs_eda_sql_coursera_sqllite.ipynb
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -199,14 +199,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z1BZJCtOXhJT",
-        "outputId": "02c47a33-587b-4060-a3d0-024c37945d5b"
+        "outputId": "dd857f52-92ac-48df-a7d8-c3cb1560110a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 9.5 MB 8.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 9.5 MB 25.1 MB/s \n",
             "\u001b[?25h"
           ]
         }
@@ -224,7 +224,7 @@
           "height": 36
         },
         "id": "Rj9VC38QXhJT",
-        "outputId": "124605b8-fc8c-4b81-b016-0844b31bd57f"
+        "outputId": "c066133f-b3e5-4de5-bbd8-3f18db789d9b"
       },
       "outputs": [
         {
@@ -247,13 +247,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ieEx571hXhJU",
-        "outputId": "076c0015-795d-47cb-c169-90c38ba3dfe0"
+        "outputId": "72227b1b-7de9-47e7-c471-0f01581503de"
       },
       "outputs": [
         {
@@ -290,32 +290,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "%sql alter table SPACEXTBL change column Landing_ Outcome L_outcome"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "W41uZSjscahU",
-        "outputId": "e5f72d62-1457-4b66-abc5-7ce490209927"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " * sqlite:///my_data1.db\n",
-            "(sqlite3.OperationalError) near \"change\": syntax error\n",
-            "[SQL: alter table SPACEXTBL change column Landing_ Outcome L_outcome]\n",
-            "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         ""
@@ -326,14 +300,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
         },
         "id": "AvUDo2ghXhJU",
-        "outputId": "4373edda-5178-4b87-ca9f-1db85d31aa8a"
+        "outputId": "5ef1a594-5a4c-43db-a98f-a683e375c7b4"
       },
       "outputs": [
         {
@@ -375,7 +349,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 12
         }
       ],
       "source": [
@@ -395,14 +369,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 284
         },
         "id": "fTLVrMuGXhJV",
-        "outputId": "1b1a7b3b-0abf-40f0-9e74-2316db5616c5"
+        "outputId": "b68e68c4-999d-4adb-d229-934f23e4fe2e"
       },
       "outputs": [
         {
@@ -505,7 +479,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 13
         }
       ],
       "source": [
@@ -525,14 +499,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 96
         },
         "id": "MZFJJSFGXhJV",
-        "outputId": "a5cb9320-005f-48a8-8d39-6b40a0a564ad"
+        "outputId": "3e5bafad-7b6d-43da-c1ee-4dee992bc64e"
       },
       "outputs": [
         {
@@ -565,7 +539,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 14
         }
       ],
       "source": [
@@ -585,14 +559,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 96
         },
         "id": "exM3K2BmXhJV",
-        "outputId": "a6594468-a72c-4015-c855-fc2f400283d0"
+        "outputId": "6b375637-9ab4-4ef8-f933-44bc04df689d"
       },
       "outputs": [
         {
@@ -625,7 +599,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 15
         }
       ],
       "source": [
@@ -647,13 +621,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 96
         },
         "id": "r6g0p_n9XhJW",
-        "outputId": "7073782b-f569-47f6-bf70-945a0045b85b"
+        "outputId": "f93b6ced-a0c5-4c31-e7f4-ac3c2b5d09e2"
       },
       "outputs": [
         {
@@ -661,14 +636,36 @@
           "name": "stdout",
           "text": [
             " * sqlite:///my_data1.db\n",
-            "(sqlite3.OperationalError) no such column: landing__outcome\n",
-            "[SQL: select min(DATE) from SPACEXTBL where landing__outcome = 'Success (ground pad)']\n",
-            "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
+            "Done.\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(None,)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>min(DATE)</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>None</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ],
       "source": [
-        "%sql select min(DATE) from SPACEXTBL where landing__outcome = 'Success (ground pad)'"
+        "%sql select min(DATE) from SPACEXTBL where \"Landing__Outcome\" = 'Success (ground pad)'"
       ]
     },
     {
@@ -685,26 +682,46 @@
     {
       "cell_type": "code",
       "source": [
-        "%sql select BOOSTER_VERSION from SPACEXTBL where Landing__Outcome = 'Success (drone ship)' and PAYLOAD_MASS__KG_ > 4000 and PAYLOAD_MASS__KG_ < 6000\n"
+        "%sql select BOOSTER_VERSION from SPACEXTBL where \"Landing_ Outcome\" = 'Success (drone ship)' and PAYLOAD_MASS__KG_ > 4000 and PAYLOAD_MASS__KG_ < 6000\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 75
         },
         "id": "p6Q069dfZ6nB",
-        "outputId": "f01ecde2-0847-4639-e30b-27267a0dd028"
+        "outputId": "288a1f95-318b-41f2-8d71-87c3ffba00bc"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             " * sqlite:///my_data1.db\n",
-            "(sqlite3.OperationalError) no such column: Landing__Outcome\n",
-            "[SQL: select BOOSTER_VERSION from SPACEXTBL where Landing__Outcome = 'Success (drone ship)' and PAYLOAD_MASS__KG_ > 4000 and PAYLOAD_MASS__KG_ < 6000]\n",
-            "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
+            "Done.\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>Booster_Version</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     },
@@ -721,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -770,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "N5NkeWwZXhJW"
       },
@@ -792,13 +809,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "5vBNFbK8XhJX"
+        "id": "5vBNFbK8XhJX",
+        "outputId": "6842c218-fa9a-4503-c832-7223886324c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 325
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * sqlite:///my_data1.db\n",
+            "Done.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('F9 B5 B1048.4',),\n",
+              " ('F9 B5 B1049.4',),\n",
+              " ('F9 B5 B1051.3',),\n",
+              " ('F9 B5 B1056.4',),\n",
+              " ('F9 B5 B1048.5',),\n",
+              " ('F9 B5 B1051.4',),\n",
+              " ('F9 B5 B1049.5',),\n",
+              " ('F9 B5 B1060.2 ',),\n",
+              " ('F9 B5 B1058.3 ',),\n",
+              " ('F9 B5 B1051.6',),\n",
+              " ('F9 B5 B1060.3',),\n",
+              " ('F9 B5 B1049.7 ',)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>Booster_Version</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1048.4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1049.4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1051.3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1056.4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1048.5</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1051.4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1049.5</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1060.2 </td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1058.3 </td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1051.6</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1060.3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>F9 B5 B1049.7 </td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ],
       "source": [
-        ""
+        "%%sql\n",
+        "SELECT DISTINCT BOOSTER_VERSION\n",
+        "FROM SPACEXTBL\n",
+        "WHERE PAYLOAD_MASS__KG_ = (\n",
+        "    SELECT MAX(PAYLOAD_MASS__KG_)\n",
+        "    FROM SPACEXTBL);"
       ]
     },
     {
@@ -816,13 +920,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "6SUue-1pXhJX"
+        "id": "6SUue-1pXhJX",
+        "outputId": "0d6ce989-32a7-4154-cabe-22a7bade6f17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * sqlite:///my_data1.db\n",
+            "(sqlite3.OperationalError) no such column: LANDING__OUTCOME\n",
+            "[SQL: SELECT LANDING__OUTCOME, BOOSTER_VERSION, LAUNCH_SITE\n",
+            "FROM SPACEXTBL\n",
+            "WHERE Landing__Outcome = 'Failure (drone ship)'\n",
+            "    AND YEAR(DATE) = 2015;]\n",
+            "(Background on this error at: https://sqlalche.me/e/14/e3q8)\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "%%sql\n",
+        "SELECT LANDING__OUTCOME, BOOSTER_VERSION, LAUNCH_SITE\n",
+        "FROM SPACEXTBL\n",
+        "WHERE Landing__Outcome = 'Failure (drone ship)'\n",
+        "    AND YEAR(DATE) = 2015;"
       ]
     },
     {
@@ -838,13 +964,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "tj1UkXUoXhJX"
+        "id": "tj1UkXUoXhJX",
+        "outputId": "9287e46b-46c2-48a7-c661-92e9e36d1ac5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * sqlite:///my_data1.db\n",
+            "(sqlite3.OperationalError) no such column: LANDING__OUTCOME\n",
+            "[SQL: SELECT LANDING__OUTCOME, COUNT(LANDING__OUTCOME) AS TOTAL_NUMBER\n",
+            "FROM SPACEXTBL\n",
+            "WHERE DATE BETWEEN '2010-06-04' AND '2017-03-20'\n",
+            "GROUP BY LANDING__OUTCOME\n",
+            "ORDER BY TOTAL_NUMBER DESC]\n",
+            "(Background on this error at: https://sqlalche.me/e/14/e3q8)\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "%%sql\n",
+        "SELECT LANDING__OUTCOME, COUNT(LANDING__OUTCOME) AS TOTAL_NUMBER\n",
+        "FROM SPACEXTBL\n",
+        "WHERE DATE BETWEEN '2010-06-04' AND '2017-03-20'\n",
+        "GROUP BY LANDING__OUTCOME\n",
+        "ORDER BY TOTAL_NUMBER DESC"
       ]
     },
     {
